--- a/WPP_Day02/index.html
+++ b/WPP_Day02/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Dhayalan</h3>
-    <button onclick="window.print()">click</button>
-    <script src="/WPP_Day02/script.js"></script>
+    <button onclick="printd()">click</button>
+    <script src="script.js"></script>
 </body>
 </html>
